# naukri-updater

./: README.md  naukri_updater.py  naukri_updater_new.py  pyproject.toml  run.bat
