[tool.poetry]
name = "naukri-updater-main"
version = "0.1.0"
description = ""
authors = ["rahul"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.10.0"
configobj = "^5.0.8"
colorama = "^0.4.6"
webdriver-manager = "^3.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
